--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-.Rproj.user
-.Rhistory
-.RData
-.Ruserdata
+*.Rproj.user
+*.Rhistory
+*.RData
+*.Ruserdata
 src/*.o
 src/*.so
 src/*.dll
 debug.txt
+*.Rhistory
+*.RData
+.Rproj.user
